# corporate-catering-system

./: .dockerignore  .env.development  .env.example  .gitignore  .prettierignore  .prettierrc  .sops.yaml  CHANGELOG.md  Cargo.toml  Dockerfile.system  Dockerfile.web  Makefile  README.md  contract-client-compile-check.ts  docker-compose.yml  go.mod  go.sum  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sonar-project.properties  tsconfig.base.json  tsconfig.contract.json  vitest.env-private-stub.ts
.sqlx/: query-2abdce3936184292f020a4ca02270c401fd67670e67006c8760a111e02c0949d.json  query-6ba1f0b9a47c6b1b8181db294ff90ea07a2532ed50b45d3e081b608e0408c18d.json  query-9af43451f53115f2c194be6c39f6525b52200430ae39697177874eb16dc36ff7.json  query-9d2c7a88515fdb5cfe3d941b191cadb6a78177fe972a56930f3fc2aebf3474a6.json  query-9f808ffc4aacb23c99a3418d8cb4f4c1e0976d696c1a961f056e9ed4e9732ac5.json  query-b1af7ed163f5b3a4191cc3718c51eeabde3d1f18b7cc95b46ea8f08b319f23d1.json  query-ced8db932b268372cd3e9d931ae25da7a1827280269dd1182671d24dd3245e31.json
apps/: README.md
apps/employee-app/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/employee-app/src-tauri/capabilities/: default.json  mobile.json
apps/employee-app/src-tauri/src/: lib.rs  main.rs
docs/: branding.md  mcp.md  user-journeys.md  user-story-book.md  ux-audit.md  ux-redesign.md
migrations/: 000001_init.down.sql  000001_init.up.sql  000002_menu_vendor_quota.down.sql  000002_menu_vendor_quota.up.sql  000003_order_lifecycle.down.sql  000003_order_lifecycle.up.sql  000004_pickup_totp.down.sql  000004_pickup_totp.up.sql  000005_payroll.down.sql  000005_payroll.up.sql  000006_governance.down.sql  000006_governance.up.sql  000007_dlq.down.sql  000007_dlq.up.sql  000008_employee_personalization.down.sql  000008_employee_personalization.up.sql  000009_feedback.down.sql  000009_feedback.up.sql  000010_vendor_settlement.down.sql  000010_vendor_settlement.up.sql  000011_order_notes.down.sql  000011_order_notes.up.sql  000012_document_resupply.down.sql  000012_document_resupply.up.sql  000013_payroll_exception.down.sql  000013_payroll_exception.up.sql  000014_supply_sold_out.down.sql  000014_supply_sold_out.up.sql  000015_vendor_order_settings.down.sql  000015_vendor_order_settings.up.sql  000016_plant_service_window.down.sql  000016_plant_service_window.up.sql  000017_design_system_branding.down.sql  000017_design_system_branding.up.sql  000018_plant_registry.down.sql  000018_plant_registry.up.sql  000019_drop_menu_item_badges.down.sql  000019_drop_menu_item_badges.up.sql  000020_dispute_nullable_entry.down.sql  000020_dispute_nullable_entry.up.sql  (+16 more)
scripts/: check-contract-drift.sh  check-e2e-smoke.sh  check-image-build.sh  check-observability-slo-baseline.sh  check-sqlx-migrations.sh  emit-release-evidence.sh  evaluate-prelaunch-load.py  render-production-overlay.sh  security-scan.sh  setup-dev.sh  verify-local-kind.sh
src/: access.rs  anomaly_alert.rs  audit.rs  cache_backbone.rs  contract.rs  event_backbone.rs  health.rs  identity.rs  lib.rs  menu_supply_window.rs  object_storage.rs  observability.rs  operations_analytics.rs  payroll.rs  persistence.rs  pickup_totp.rs  quota.rs  rush_reminder.rs  vendor_compliance.rs  vendor_delivery_mapping.rs  vendor_fulfillment.rs
tests/: audit_trail_investigation.rs  cache_backbone_valkey.rs  event_backbone_jetstream.rs  http_delivery_execution_gateway.rs  http_menu_supply_execution_gateway.rs  http_vendor_fulfillment_execution_gateway.rs  identity_access_governance.rs  mcp_server_domain_parity.rs  menu_supply_window_management.rs  observability_k8s_slo_baseline.rs  (+8 more)
(+1243 files in other folders)
