[package]
name = "corporate-catering-system"
version = "0.1.0"
edition = "2021"

[lib]
name = "corporate_catering_system"
path = "src/lib.rs"

[dependencies]
opentelemetry = { version = "0.24", features = ["metrics", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"
