[package]
name = "corporate-catering-system"
version = "0.1.0"
edition = "2021"

[lib]
name = "corporate_catering_system"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.7", features = ["json"] }
opentelemetry = { version = "0.24", features = ["logs", "metrics", "trace"] }
opentelemetry-otlp = { version = "0.17", features = ["grpc-tonic", "logs", "metrics", "trace"] }
opentelemetry_sdk = { version = "0.24", features = ["logs", "metrics", "rt-tokio", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-opentelemetry = "0.25"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
