[package]
name = "corporate-catering-system"
version = "0.1.0"
edition = "2021"

[lib]
name = "corporate_catering_system"
path = "src/lib.rs"

[dependencies]
aes-gcm = "0.10"
async-nats = "0.38"
axum = { version = "0.7", features = ["json"] }
base64 = "0.22"
futures = "0.3"
hmac = "0.12"
opentelemetry = { version = "0.24", features = ["logs", "metrics", "trace"] }
opentelemetry-otlp = { version = "0.17", features = ["grpc-tonic", "logs", "metrics", "trace"] }
opentelemetry_sdk = { version = "0.24", features = ["logs", "metrics", "rt-tokio", "trace"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "json", "migrate"] }
subtle = "2.6"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-opentelemetry = "0.25"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

[dev-dependencies]
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
