[package]
name = "tbite-employee-app"
version = "0.0.0"
description = "T-Bite employee mobile app"
edition = "2021"
rust-version = "1.77.2"

# The library crate is what Tauri's mobile entrypoints (iOS/Android) link
# against; `name` must match `tauri::mobile_entry_point` usage in lib.rs.
[lib]
name = "tbite_employee_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# tauri-plugin-stronghold provides the secure token store on device.
# Enabled for the native build; see README for the bring-up checklist.
[target.'cfg(any(target_os = "ios", target_os = "android"))'.dependencies]
tauri-plugin-stronghold = "2"

[features]
# This feature is used for production builds where `devPath` points to the
# filesystem rather than a dev server.
custom-protocol = ["tauri/custom-protocol"]
